# offlinedatasci

./: .gitignore  .readthedocs.yaml  .zenodo.json  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  cran_test.py  paper.bib  paper.md  pyproject.toml  setup.py
.github/workflows/: automate-waiting-labels.yml  package-check.yml  pip-download.yml  render-paper.yml
Offline_Data_Carpentry/IBB/Data_Carpentry/: hts-log.txt  index.html
Offline_Data_Carpentry/IBB/Data_Carpentry/datacarpentry.org/spreadsheet-ecology-lesson/00-intro/: index.html
Offline_Data_Carpentry/IBB/Data_Carpentry/hts-cache/: new.lst  new.txt  old.txt
Offline_Data_Carpentry/scripts/: downloadfiles.py  updatingfiles.py
carpenpi/: __init__.py  cli.py  commandscript.sh  download_lessons.py  downloadfiles.py  downloadfunction.py  getR.py  httrack_carpentries.sh  main.py  miniCran.R  urls.py
carpenpi/updates/: imports.py  r_html_downloader.py  rmachtml_2021-05-20.txt  rstudio.py  rwinhtml_2021-08-10.txt
docs/: conf.py  getting-started.md  index.rst  installation.md  requirements.txt
docs/source/: modules.rst  offlinedatasci.rst
offlinedatasci/: __init__.py  cli.py  main.py  miniCran.R
offlinedatasci.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
test/: Rprofile.site  test_offlinedatasci.py
